Убрал скрол и отцентровал цифры в красных кругах

--- a/index.html
+++ b/index.html
@@ -39,19 +39,15 @@
 					</button>
 				</form>
 				<button class="button_center button_center-one">     
-					<img src="img/svg/heart.svg" alt="" class="img_center-one"> Избранное 
-					<div class="red-ball ball-one">
-						<span class="numb-ball">3</span>
-					</div>                       
+					<img src="img/svg/heart.svg" alt="" class="img_center-one"> <span class="button-text-one">Избранное</span>
+					<span class="center_red-numb center-fhree">3</span>                    
 				</button>
 				<button class="button_center button_center-two">                
-					<img src="img/svg/heart2.svg" alt="" class="img_center-two"> <span class="button-text-one">Сравнить</span> 
+					<img src="img/svg/heart2.svg" alt="" class="img_center-two"> <span class="button-text-two">Сравнить</span> 
 				</button>
 				<button class="button_center button_center-fhree">
-					<img src="img/svg/heart3.svg" alt="" class="img_center-fhree"> <span class="button-text-two">Корзина</span>
-					<div class="red-ball ball-two">
-						<span class="numb-ball numb-two">7</span>
-					</div>
+					<img src="img/svg/heart3.svg" alt="" class="img_center-fhree"> <span class="button-text-fhree">Корзина</span>
+					<span class="center_red-numb center-seven">7</span>
 				</button>
 			</div>
 			<div class="end">
